<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="team_name_home" type="id"/>
    <item name="team_name_away" type="id"/>
    <item name="team_badge_home" type="id"/>
    <item name="team_badge_away" type="id"/>
    <item name="match_score" type="id"/>
    <item name="match_date" type="id"/>
    <item name="match_time" type="id"/>
    <item name="add_to_calendar" type="id"/>
    <item name="bottom_navigation_bar" type="id"/>
    <item name="home_badge_progress_bar" type="id"/>
    <item name="away_badge_progress_bar" type="id"/>

    <item name="home_formation" type="id"/>
    <item name="away_formation" type="id"/>

    <item name="detail_activity_progress_bar" type="id"/>
    <item name="detail_activity_scroll_view" type="id"/>

    <item name="goals_label_text" type="id"/>
    <item name="home_goals" type="id"/>
    <item name="away_goals" type="id"/>

    <item name="shots_label_text" type="id"/>
    <item name="home_shots" type="id"/>
    <item name="away_shots" type="id"/>

    <item name="goal_keeper_label_text" type="id"/>
    <item name="home_goal_keeper" type="id"/>
    <item name="away_goal_keeper" type="id"/>

    <item name="defense_label_text" type="id"/>
    <item name="home_defense" type="id"/>
    <item name="away_defense" type="id"/>

    <item name="midfield_label_text" type="id"/>
    <item name="home_midfield" type="id"/>
    <item name="away_midfield" type="id"/>

    <item name="forward_label_text" type="id"/>
    <item name="home_forward" type="id"/>
    <item name="away_forward" type="id"/>

    <item name="substitutes_label_text" type="id"/>
    <item name="home_substitutes" type="id"/>
    <item name="away_substitutes" type="id"/>

    <item name="error_message" type="id"/>

    <item name="main_container" type="id"/>
    <item name="detail_view" type="id"/>

    <item name="list_event" type="id"/>
    <item name="spinner_league" type="id"/>
    <item name="list_favorite_event" type="id"/>
    <item name="list_favorite_team" type="id"/>
    <item name="swipe_refresh_favorite_event" type="id"/>
    <item name="swipe_refresh_favorite_team" type="id"/>

    <item name="tab_layout_matches" type="id"/>
    <item name="view_pager_matches" type="id"/>

    <item name="tab_layout_favorites" type="id"/>
    <item name="view_pager_favorites" type="id"/>

    <item name="list_team" type="id"/>
    <item name="team_name" type="id"/>
    <item name="team_badge" type="id"/>

    <item name="appbar" type="id"/>
    <item name="collapsing_toolbar" type="id"/>
    <item name="toolbar" type="id"/>
    <item name="tab_layout_detail_team" type="id"/>

    <item name="view_pager_team_detail" type="id"/>
    <item name="list_player" type="id"/>
    <item name="player_photo" type="id"/>
    <item name="player_name" type="id"/>
    <item name="player_position" type="id"/>
</resources>