<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_matches"
        android:enabled="true"
        android:icon="@drawable/matches_icon"
        android:title="@string/matches"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_teams"
        android:enabled="true"
        android:icon="@drawable/teams_icon"
        android:title="@string/teams"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
</menu>